<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".RegisterFragment"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:background="#ffff"
android:padding="16dp"
android:orientation="vertical">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:gravity="center"
    android:text= "Create Account"
    android:textSize="40dp"
    android:textColor="#000"
    android:textStyle="bold" />

<EditText
    android:id="@+id/register_user"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_margin="4dp"
    android:background="@drawable/registration_background"
    android:drawableLeft="@drawable/ic_baseline_person_24"
    android:elevation="15dp"
    android:padding="6dp"
    android:hint="@string/user"/>

<EditText
    android:id="@+id/register_email"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/registration_background"
    android:drawableLeft="@drawable/ic_baseline_email_24"
    android:elevation="15dp"
    android:padding="6dp"
    android:hint="@string/email"/>

<EditText
    android:id="@+id/register_password"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/registration_background"
    android:drawableLeft="@drawable/ic_baseline_lock_24"
    android:elevation="15dp"
    android:padding="6dp"
    android:hint="@string/password"/>

<ImageButton
    android:id="@+id/registerButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="100dp"
    android:background="@drawable/ic_baseline_arrow_forward_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBackRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:contentDescription="@string/submit"
        android:layout_margin="16dp"
        android:onClick="backBtnRegister"
        android:clickable="true"/>
</LinearLayout>